test: extract JSON to files, add YAML, downgrade tests to JDK 11 (#350)
The downgrade is mostly motivated by 2 reasons:

 - multi-line string was the main recent Java feature used in tests
before this change
 - IDEA always got confused and treated core tests as being compiled
to Java 11